--- a/app/assets/stylesheets/application/worktrains.scss
+++ b/app/assets/stylesheets/application/worktrains.scss
@@ -43,7 +43,9 @@
 		border: solid 1px #e3e3e3;
 		margin-bottom: 20px;
 		padding: 10px 10px 10px;
-		
+		img {
+			width: 348.656px;
+		}
 		.mt-10 {
 			margin-top: 10px;
 		}
