--- a/app/views/worktrains/index.html.erb
+++ b/app/views/worktrains/index.html.erb
@@ -9,47 +9,13 @@
 	<div class="row col">
 	  <!-- <div class="col-md-4 courses_tent"> -->
     <div class="worktrain_col">
-    <% @trains.each do |train| %>
-      <%= link_to worktrain_path(train) do |i| %>
-          <div class="bordered">
-            <div class="imgholder">
-            <%= image_tag(train.try(:image).try(:avatar).present? ? train.try(:image).try(:avatar) : "workt2.png", width: "100%", class: "lazy")%>
-            </div>
-            <div class="col-sm-12 mt-10">
-              <h4><%= train.title.try(:truncate, 15) %></h4>
-              <p><%=raw train.introduce.try(:truncate, 20) %></p>
-            </div>
-            <div class="col-sm-12 infos">
-              <span class="glyphicon glyphicon-eye-open"></span> <%= train.views_count_s %>
-              &nbsp;&nbsp;&nbsp;
-              <span class="glyphicon glyphicon-time"></span>&nbsp;<%= train.created_at.strftime("%F %H:%M:%S") %>
-            </div>
-          </div>
-      <% end %>
-    <% end %>
+    <%= render partial: "col" %>
     </div>
 	</div>
   
   <div id="test" style="display:none;">
   <div class="worktrain_col">
-    <% @trains.each do |train| %>
-      <%= link_to worktrain_path(train) do |i| %>
-          <div class="bordered">
-            <div class="imgholder">
-            <%= image_tag(train.try(:image).try(:avatar).present? ? train.try(:image).try(:avatar) : "workt2.png", width: "100%", class: "lazy")%>
-            </div>
-            <div class="col-sm-12 mt-10">
-              <h4><%= train.title.try(:truncate, 15) %></h4>
-              <p><%=raw train.introduce.try(:truncate, 20) %></p>
-            </div>
-            <div class="col-sm-12 infos">
-              <span class="glyphicon glyphicon-eye-open"></span> <%= train.views_count_s %>
-              &nbsp;&nbsp;&nbsp;
-              <span class="glyphicon glyphicon-time"></span>&nbsp;<%= train.created_at.strftime("%F %H:%M:%S") %>
-            </div>
-          </div>
-      <% end %>
-    <% end %>
+    <%= render partial: "col" %>
   </div>
   </div>
 </div>
@@ -58,12 +24,22 @@
 $(function(){
   $("img.lazy").lazyload({    
     load:function(){
+      $('.col').BlocksIt({
+        numOfCol:3,
+        // offsetX: 8,
+        // offsetY: 8
+      });
     }
   }); 
   $(window).scroll(function(){
       // 当滚动到最底部以上50像素时， 加载新内容
     if ($(document).height() - $(this).scrollTop() - $(this).height()<50){
-      $('.col').append($("#test").html());    
+      $('.col').append($("#test").html());
+      $('.col').BlocksIt({
+        numOfCol:3,
+        // offsetX: 8,
+        // offsetY: 8
+      });    
       $("img.lazy").lazyload();
     }
   });
@@ -90,6 +66,11 @@ $(function(){
     if(conWidth != currentWidth) {
       currentWidth = conWidth;
       $('.col').width(conWidth);
+      $('.col').BlocksIt({
+        numOfCol: col,
+        // offsetX: 8,
+        // offsetY: 8
+      });
     }
   });
 });
