--- a/app/assets/stylesheets/application/user.scss
+++ b/app/assets/stylesheets/application/user.scss
@@ -192,6 +192,40 @@
 		}
 	}
 }
+	// _resumes_form.scss
+.wrapper{
+	padding:20px;
+	.content{
+		border-left: 2px solid #59C2B7;
+		padding-left: 20px;
+		.my-col{
+			padding:0 10px;
+		}
+		.my-group{
+			margin-bottom: 10px;
+			.my-btn{
+				padding: 6px 67px;
+				border: 1px solid #ccc;
+			}
+			label{
+				color: #717171;
+			}
+		}
+		.mybtn{
+				padding: 10px 40px;
+				color: #fff;
+				border-radius: 0;
+				font-size: 18px;
+				margin-top: 30px;
+			}
+		.my_btn1{
+				background-color: #f16c70;
+			}
+		.my_btn2{
+				background-color: #8bd4cc;
+			}
+	}
+}
 
 
 /* user left_nav */
