--- a/app/views/user/_resumes_form.html.erb
+++ b/app/views/user/_resumes_form.html.erb
@@ -95,8 +95,11 @@
 				</form>
 			</div>
 		<!-- 教育经历 -->
-			<div class="my-col col-md-12">
+			<div class="my-col col-md-12 add1">
 				<h3>教育经历</h3>
+				<span class="my-add1">
+					<a href="#"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> 添加经历</a>
+				</span>
 			</div>
 			<div class="my-col col-md-12">
 				<form class="form-horizontal">
@@ -123,8 +126,11 @@
 				</form>
 			</div>
 		<!-- 实习经历 -->
-			<div class="my-col col-md-12">
+			<div class="my-col col-md-12 add1">
 				<h3>实习经历</h3>
+				<span class="my-add1">
+					<a href="#"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> 添加经历	</a>
+				</span>
 			</div>
 			<div class="my-col col-md-12">
 				<form class="form-horizontal">
@@ -151,8 +157,11 @@
 				</form>
 			</div>
 		<!-- 项目经验 -->
-			<div class="my-col col-md-12">
+			<div class="my-col col-md-12 add1">
 				<h3>项目经验</h3>
+				<span class="my-add1">
+					<a href="#"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> 添加经验</a>
+				</span>
 			</div>
 			<div class="my-col col-md-12">
 				<form class="form-horizontal">
@@ -171,9 +180,17 @@
 				    <div class="col-md-4">
 				      <input type="text" class="form-control" id="inputText">
 				    </div>
-				    <label for="inputText" class="col-md-2 control-label">项目凭证</label>
+
+				    <!-- <label for="inputText" class="col-md-2 control-label">项目凭证</label>
 				    <div class="col-md-4">
 				      <input type="text" class="form-control" id="inputText">
+				    </div> -->
+				    <label class="col-md-2 control-label" for="inputText">项目凭证</label>
+				    <div class="col-md-4 input-group input-set">
+				      <input type="text" class="form-control" id="inputText">
+				      <div class="input-group-addon my-addon">
+				      	<a href="#">浏览</a>
+				      </div>
 				    </div>
 				  </div>
 				   <div class="form-group my-group">
@@ -185,8 +202,11 @@
 				</form>
 			</div>
 		<!-- 自定义模块 -->
-			<div class="my-col col-md-12">
+			<div class="my-col col-md-12 add1">
 				<h3>自定义模块</h3>
+				<span class="my-add1">
+					<a href="#"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> 添加技能</a>
+				</span>
 			</div>
 			<div class="my-col col-md-12">
 				<form class="form-horizontal">
