--- a/app/views/user/comment.html.erb
+++ b/app/views/user/comment.html.erb
@@ -2,7 +2,7 @@
 <div class="main">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-offset-1 col-md-10 main-content">
+			<div id="tagshow" class="col-md-offset-1 col-md-10 main-content">
 				<h3 class="main-title">印象评价</h3>
 				<div class="row">
 					<div class="col-md-5 my-divider">
