fix bug of wechat apply

--- a/app/views/wechat/applies/success.html.erb
+++ b/app/views/wechat/applies/success.html.erb
@@ -2,11 +2,12 @@
 	<div class="text-center">
 		<%=image_tag"apply2.png",width:"90%"%>
 	</div>
-	<div class="col-xs-10 col-xs-offset-1">
-		<br><br>
-		<h4 class="text-justify text-warning" style="line-height: 1.5;">报名成功，感谢您的关注，本次训练营开班时间为2015年11月23日。审核通过后会有辅导员与您联系。如需咨询，请加入梦想训练营官方QQ群：
-		<span class="text-primary">377514266</span></h4>
-	</div>
+	<br>
+	<h4 class="text-justify" style="line-height: 1.5;">
+		报名成功，感谢您的关注，本次训练营开班时间为2015年11月23日。审核通过后会有辅导员与您联系。如需咨询，请加入梦想训练营官方QQ群：
+		<span class="text-danger">377514266</span>
+		（<span class="text-primary">P.S：分享到朋友圈截图给微信公众号，即可享受训练营免费住宿哦!</span>）
+	</h4>
 </div>	
 
 <div class="col-xs-12 turn-back bottom-link">
