--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -2,29 +2,17 @@
 	<ul id="xcui-menu">
 		<li>
 			<%= link_to admin_colleges_path do %>
-				<span class="glyphicon glyphicon-book"></span> 院校列表
-			<%end%>
-		</li>
-
-		<li>
-			<%= link_to admin_recruitments_path do %>
-				<span class="glyphicon glyphicon-tag"></span> 招聘列表
+				<span class="glyphicon glyphicon-flag"></span> 院校列表
 			<%end%>
 		</li>
 		<li>
-			<%= link_to admin_trains_path do %>
-				<span class="glyphicon glyphicon-education"></span> 职前培训
+			<%= link_to admin_courses_path do %>
+				<span class="glyphicon glyphicon-tasks"></span> 课程列表
 			<%end%>
 		</li>
-		<li>
-			<%= link_to admin_companies_path do %>
-				<span class="glyphicon glyphicon-briefcase"></span> 公司列表
-			<%end%>
-		</li>
-
 		<li>
 			<%= link_to admin_categories_path do %>
-				<span class="glyphicon glyphicon-user"></span> 课程分类
+				<span class="glyphicon glyphicon-book"></span> 课程分类
 			<%end%>
 		</li>
 		<li>
@@ -33,8 +21,18 @@
 			<%end%>
 		</li>
 		<li>
-			<%= link_to admin_courses_path do %>
-				<span class="glyphicon glyphicon-tasks"></span> 课程列表
+			<%= link_to admin_companies_path do %>
+				<span class="glyphicon glyphicon-briefcase"></span> 公司列表
+			<%end%>
+		</li>
+		<li>
+			<%= link_to admin_recruitments_path do %>
+				<span class="glyphicon glyphicon-tag"></span> 招聘列表
+			<%end%>
+		</li>
+		<li>
+			<%= link_to admin_trains_path do %>
+				<span class="glyphicon glyphicon-education"></span> 职前培训
 			<%end%>
 		</li>
 		<li>
