--- a/app/views/user/home.html.erb
+++ b/app/views/user/home.html.erb
@@ -65,11 +65,8 @@
 		<div class="row">
 			<div class="col-md-offset-1 col-md-10 main-content">
 				<h3>印象评价</h3>
+				<div id="tagshow">
 				<%= render partial: "user_comment" %>
-				<div class="col-md-2 my-impression text-center">
-					<span class="my-add">
-						<a href="#"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> 添加印象</a>
-					</span>	
 				</div>
 			</div>
 		</div>
