--- a/app/views/user/remove.js.erb
+++ b/app/views/user/remove.js.erb
@@ -1,1 +1,2 @@
 $("#tagshow").html("<%= escape_javascript(render partial: "user_comment")%>");
+$("#tab-tag").html("<%= escape_javascript(render partial: "impression_tag")%>");
