--- a/app/views/user/my_impression.html.erb
+++ b/app/views/user/my_impression.html.erb
@@ -10,10 +10,8 @@
 			            <h4 class="impression-title text-center"><span>大家对我的印象</span></h4>
 			            <hr class="user-impression">
 			        </div>
-			        <div class="col-md-12 impression-tab">
-			        <% (0..7).each do %>
-			        	<button class="btn btn-success tab" type="button">帮帮哒！<span class="badge">20</span></button>
-			        <% end %>
+			        <div id="tab-tag" class="col-md-12 impression-tab">
+						<%=render "impression_tag" %>
 			        </div>
 			        <div class="col-md-12 impression-t">
 			            <h4 class="impression-title text-center"><span>大家对我的评价</span></h4>
@@ -27,24 +25,24 @@
 							<% end %>
 							</div>
 							<div class="col-md-11">
-							<p><span><%= comment.try(:user).try(:nickname) %></span><span class="eva-col">说：</span></p>
+							<p>
+							<%= link_to(home_user_path(comment.user.id)) do %>
+							<span><%= comment.try(:user).try(:nickname) %></span>
+							<% end %>
+							<span class="eva-col">说：</span>
+							<span class="pull-right time-tip"><%= time_interval(comment) %></span>
+							</p>
+							<%= link_to(home_user_path(comment.user.id)) do %>
 			        		<p><%= comment.body %></p>
+			        		<% end %>
 							<% comment.children.each do |children| %>
 								<p class="eva-bg"><span class="eva-col"><%= children.user.nickname %>:</span><span><%= children.body %></span></p>
 							<% end %>
-							<div class="gray-text comment-text">
-								<span class="pull-left time-tip"><%= time_interval(comment) %></span>
-								<%= form_tag  comment_user_user_path(@user), method: :post, class: "child-form" do |f|%>
-									<%= text_area_tag "body", "", class: "reply_text form-control navbar-form navbar-left", rows: 1, placeholder: "请输入您的描述!" %>
-									<%= hidden_field_tag "parent_id", comment.id %>
-									<%= submit_tag "回复", class: "btn btn-info" %>
-								<% end %>
-							</div>
 							<hr>
 							</div>
 						<% end %>
 						</div>	
-					<div class="text-center"><%= paginate  @comments, remote: true %></div>
+					<div class="text-center"><%= paginate  @comments %></div>
 				</div>
 			</div>
 		</div>
