--- a/app/views/worktrains/index.html.erb
+++ b/app/views/worktrains/index.html.erb
@@ -22,57 +22,57 @@
 
 <script type="text/javascript">
 $(function(){
-  $("img.lazy").lazyload({    
-    load:function(){
-      $('.col').BlocksIt({
-        numOfCol:3,
-        // offsetX: 8,
-        // offsetY: 8
-      });
-    }
-  }); 
+  // $("img.lazy").lazyload({    
+  //   load:function(){
+  //     $('.col').BlocksIt({
+  //       numOfCol:3,
+  //       offsetX: 8,
+  //       offsetY: 8
+  //     });
+  //   }
+  // }); 
   $(window).scroll(function(){
       // 当滚动到最底部以上50像素时， 加载新内容
     if ($(document).height() - $(this).scrollTop() - $(this).height()<50){
       $('.col').append($("#test").html());
-      $('.col').BlocksIt({
-        numOfCol:3,
-        // offsetX: 8,
-        // offsetY: 8
-      });    
+      // $('.col').BlocksIt({
+      //   numOfCol:3,
+      //   offsetX: 8,
+      //   offsetY: 8
+      // });    
       $("img.lazy").lazyload();
     }
   });
   
   //window resize
-  var currentWidth = 1100;
-  $(window).resize(function() {
-    var winWidth = $(window).width();
-    var conWidth;
-    if(winWidth < 660) {
-      conWidth = 440;
-      col = 2
-    } else if(winWidth < 880) {
-      conWidth = 660;
-      col = 3
-    } else if(winWidth < 1100) {
-      conWidth = 880;
-      col = 4;
-    } else {
-      conWidth = 1100;
-      col = 5;
-    }
+  // var currentWidth = 1100;
+  // $(window).resize(function() {
+  //   var winWidth = $(window).width();
+  //   var conWidth;
+  //   if(winWidth < 660) {
+  //     conWidth = 440;
+  //     col = 2
+  //   } else if(winWidth < 880) {
+  //     conWidth = 660;
+  //     col = 3
+  //   } else if(winWidth < 1100) {
+  //     conWidth = 880;
+  //     col = 4;
+  //   } else {
+  //     conWidth = 1100;
+  //     col = 5;
+  //   }
     
-    if(conWidth != currentWidth) {
-      currentWidth = conWidth;
-      $('.col').width(conWidth);
-      $('.col').BlocksIt({
-        numOfCol: col,
-        // offsetX: 8,
-        // offsetY: 8
-      });
-    }
-  });
+  //   if(conWidth != currentWidth) {
+  //     currentWidth = conWidth;
+  //     $('.col').width(conWidth);
+  //     $('.col').BlocksIt({
+  //       numOfCol: col,
+  //       offsetX: 8,
+  //       offsetY: 8
+  //     });
+  //   }
+  // });
 });
 </script>
 
