--- a/app/assets/stylesheets/application/worktrains.scss
+++ b/app/assets/stylesheets/application/worktrains.scss
@@ -33,10 +33,10 @@
 	.worktrain_col {
 		padding: 0 15px;
 		padding-bottom: 20px;
-		-webkit-column-count:3;
-		-moz-column-count:3;
-		-ms-column-count:3;
-		-o-column-count:3;
+		// -webkit-column-count:3;
+		// -moz-column-count:3;
+		// -ms-column-count:3;
+		// -o-column-count:3;
 	}
 	.bordered {
 		background-color: #F0F0F0;
