--- a/app/views/worktrains/index.html.erb
+++ b/app/views/worktrains/index.html.erb
@@ -22,24 +22,24 @@
 
 <script type="text/javascript">
 $(function(){
-  // $("img.lazy").lazyload({    
-  //   load:function(){
-  //     $('.col').BlocksIt({
-  //       numOfCol:3,
-  //       offsetX: 8,
-  //       offsetY: 8
-  //     });
-  //   }
-  // }); 
+  $("img.lazy").lazyload({    
+    load:function(){
+      $('.col').BlocksIt({
+        numOfCol:3,
+        offsetX: 8,
+        offsetY: 8
+      });
+    }
+  }); 
   $(window).scroll(function(){
       // 当滚动到最底部以上50像素时， 加载新内容
     if ($(document).height() - $(this).scrollTop() - $(this).height()<50){
       $('.col').append($("#test").html());
-      // $('.col').BlocksIt({
-      //   numOfCol:3,
-      //   offsetX: 8,
-      //   offsetY: 8
-      // });    
+      $('.col').BlocksIt({
+        numOfCol:3,
+        offsetX: 118,
+        offsetY: 1108
+      });    
       $("img.lazy").lazyload();
     }
   });
