--- a/app/views/admin/colleges/courses.html.erb
+++ b/app/views/admin/colleges/courses.html.erb
@@ -2,13 +2,15 @@
   <li>
     <a href="#{admin_root_path}">后台</a>
   </li>
-  <li class="active">院校列表</li>
+  <li><%= link_to "院校列表", admin_colleges_path %></li>
+  <li class="active"><%= @college.name %></li>
+  <li class="active">课程列表</li>
 <%end%>
 
 <%= content_for :toolbar do %>
   <div class="col-xs-12">
-    <%= link_to new_admin_course_path, 'data-no-turbolink' => true, class: 'btn btn-success' do %>
-      <span class="glyphicon glyphicon-plus-sign">新建</span>
+    <%= link_to new_courses_admin_college_path, 'data-no-turbolink' => true, class: 'btn btn-success' do %>
+      <span class="glyphicon glyphicon-plus-sign"></span> 添加
     <%end%>
     <div class="col-xs-3 pull-right">
       <div class="form-group">
@@ -31,7 +33,7 @@
     </tr>
   </thead>
   <tbody>
-  <%= render @courses %>
+  <%= render @college_courses %>
   </tbody>
 </table>
-<%= paginate @courses %>
+<%= paginate @college_courses %>
