--- a/app/views/admin/colleges/index.html.erb
+++ b/app/views/admin/colleges/index.html.erb
@@ -24,6 +24,7 @@
     <tr>
       <th class="text-center">院校logo</th>
       <th class="text-center">名称</th>
+      <th class="text-center">课程</th>
       <th class="text-center" colspan="2">操作</th>
     </tr>
   </thead>
