--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -9,15 +9,6 @@
 		<% end %>
 	</div>
 </div>
-<div id="school" class="form-group">
-	<%= label_tag :college, '所属学校', class: 'col-sm-2 control-label' %>
-	<div class="col-sm-8">
-		<% @colleges.each do |p| %>
-		<%= f.radio_button :college_id, p.id %>
-		<%= f.label :college_id, p.name %>
-		<% end %>
-	</div>
-</div>
 <div id="teacher" class="form-group">
 	<%= label_tag :teacher, "主讲教师", class: 'col-sm-2 control-label' %>
 	<div class="col-sm-8">
@@ -80,16 +71,16 @@
 
 <script type="text/javascript">
   //逻辑已改成： 课程只属于学校或者分类，其中之一，必须有老师头像
-	$(function(){
-		$("#course_image, #course_attachment").fileinput();
-	});
-	//点击分类时，隐藏学校
-	$("#category :radio").click(function(){
-		$("#school").hide();
-	});
-	//点击学校选择时，隐藏分类
-	$("#school :radio").click(function(){
-		$("#category").hide();
-	});
+	// $(function(){
+	// 	$("#course_image, #course_attachment").fileinput();
+	// });
+	// //点击分类时，隐藏学校
+	// $("#category :radio").click(function(){
+	// 	$("#school").hide();
+	// });
+	// //点击学校选择时，隐藏分类
+	// $("#school :radio").click(function(){
+	// 	$("#category").hide();
+	// });
 
 </script>
