--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -22,9 +22,9 @@
 <table class="table table-hover table-bordered text-center table-condensed">
   <thead>
     <tr>
-      <th class="text-center">序号</th>
+      <th class="text-center">编号</th>
       <th class="text-center">课程标题</th>
-      <th class="text-center">主讲老师/所属院校/所属分类</th>
+      <th class="text-center">主讲老师 / 所属分类</th>
       <th class="text-center">访问量</th>
       <th class="text-center">子课程</th>
       <th class="text-center" colspan="2">操作</th>
