--- a/app/assets/stylesheets/application/worktrains.scss
+++ b/app/assets/stylesheets/application/worktrains.scss
@@ -30,6 +30,84 @@
 	}
 }
 .worktrains__index{
+
+
+
+	/* 定义关键帧 */
+@-webkit-keyframes shade{
+	from{opacity:1;}
+	15%{opacity:0.4;}
+	to{opacity:1;}
+}
+@-moz-keyframes shade{
+	from{opacity:1;}
+	15%{opacity:0.4;}
+	to{opacity:1;}
+}
+@-ms-keyframes shade{
+	from{opacity:1;}
+	15%{opacity:0.4;}
+	to{opacity:1;}
+}
+@-o-keyframes shade{
+	from{opacity:1;}
+	15%{opacity:0.4;}
+	to{opacity:1;}
+}
+@keyframes shade{
+	from{opacity:1;}
+	15%{opacity:0.4;}
+	to{opacity:1;}
+}
+/* wrap */
+#wrap{
+	height:auto;
+	margin:0 auto;
+	position:relative;
+}
+#wrap .box{
+	width:380px;
+	height:auto;
+	padding:10px;
+	border:none;
+	float:left;
+}
+#wrap .box .info{
+	height:auto;
+	border-radius:8px;
+	box-shadow:0 0 11px #666;
+	background:#fff;
+}
+#wrap .box .info .pic{
+	width:340px;
+	height:auto;
+	margin:0 auto;
+	padding-top:10px;
+}
+#wrap .box .info .pic:hover{
+	-webkit-animation:shade 3s ease-in-out 1;
+	-moz-animation:shade 3s ease-in-out 1;
+	-ms-animation:shade 3s ease-in-out 1;
+	-o-animation:shade 3s ease-in-out 1;
+	animation:shade 3s ease-in-out 1;
+}
+#wrap .box .info .pic img{
+	width:340px;
+	border-radius:3px;
+}
+#wrap .box .info .title{
+	width:340px;
+	margin:0 auto;
+	line-height:40px;
+	text-align:center;
+	color:#666;
+	font-size:18px;
+	font-weight:bold;
+}
+
+
+
+
 	.worktrain_col {
 		padding: 0 15px;
 		padding-bottom: 20px;
