complete CRUD of admin technology

--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -6,6 +6,22 @@
 			<%end%>
 		</li>
 		<li>
+			<%= link_to admin_technologies_path do %>
+				<span class="glyphicon glyphicon-wrench"></span> 技术体系
+			<%end%>
+		</li>
+		<li>
+			<%= link_to admin_professions_path do %>
+				<span class="glyphicon glyphicon-road"></span> 职业路径
+			<%end%>
+		</li>
+		<hr>
+		<li>
+			<%= link_to admin_trains_path do %>
+				<span class="glyphicon glyphicon-education"></span> 职前培训
+			<%end%>
+		</li>		
+		<li>
 			<%= link_to admin_courses_path do %>
 				<span class="glyphicon glyphicon-tasks"></span> 课程列表
 			<%end%>
@@ -15,6 +31,7 @@
 				<span class="glyphicon glyphicon-book"></span> 课程分类
 			<%end%>
 		</li>
+		<hr>
 		<li>
 			<%= link_to admin_teachers_path do %>
 				<span class="glyphicon glyphicon-user"></span> 教师列表
@@ -30,11 +47,7 @@
 				<span class="glyphicon glyphicon-tag"></span> 招聘列表
 			<%end%>
 		</li>
-		<li>
-			<%= link_to admin_trains_path do %>
-				<span class="glyphicon glyphicon-education"></span> 职前培训
-			<%end%>
-		</li>
+		<hr>
 		<li>
 			<%= link_to admin_applies_path do %>
 				<span class="glyphicon glyphicon-list-alt"></span> 报名统计
