--- a/app/assets/stylesheets/admin/main.css.scss
+++ b/app/assets/stylesheets/admin/main.css.scss
@@ -106,6 +106,10 @@ footer{
     -webkit-border-radius: 3px;
             border-radius: 3px;
   }
+  hr{
+   margin: 10px 0; 
+   border-color: #ddd;
+  }
 }
 /*main内容显示*/
 #main-content {
