--- a/app/views/admin/professions/_profession.html.erb
+++ b/app/views/admin/professions/_profession.html.erb
@@ -1,13 +1,13 @@
 <tr>
   <td><%= profession.id %></td>
   <td><%= profession.name %></td>
-  <td></td>
+  <td><%= image_tag(profession.try(:image).try(:avatar), size: "130x70") %></td>
   <td><%= link_to "课程列表", "#" %></td>
   <td>
-    <%= link_to "#", class: 'btn btn-xs btn-default', title: '编辑' do %>
+    <%= link_to edit_admin_profession_path(profession), class: 'btn btn-xs btn-default', title: '编辑' do %>
       <span class="glyphicon glyphicon-edit"></span>
     <%end%>
-    <%= link_to "#", data:{ confirm: 'Are you sure?'},method: :delete, class: 'btn btn-xs btn-danger', title: '删除' do %>
+    <%= link_to admin_profession_path(profession), data:{ confirm: 'Are you sure?'},method: :delete, class: 'btn btn-xs btn-danger', title: '删除' do %>
       <span class="glyphicon glyphicon-trash"></span>
     <%end%>
   </td>
