--- a/app/views/admin/professions/edit.html.erb
+++ b/app/views/admin/professions/edit.html.erb
@@ -1,7 +1,7 @@
 <%= content_for :nav do%>
   <li><a href="<%= admin_root_path%>">后台</a></li>
-  <li><a href="<%= admin_technologies_path%>">技术体系列表</a></li>
-  <li><%= link_to @technology.name, admin_technologies_path %></li>
+  <li><a href="<%= admin_professions_path%>">职业路径列表</a></li>
+  <li><%= link_to @profession.name, admin_professions_path %></li>
   <li class="active">修改</li>
 <%end%>
 <hr></hr>
