--- a/app/views/admin/professions/index.html.erb
+++ b/app/views/admin/professions/index.html.erb
@@ -7,7 +7,7 @@
 
 <%= content_for :toolbar do %>
   <div class="col-xs-12">
-    <%= link_to "#", class: 'btn btn-success' do %>
+    <%= link_to new_admin_profession_path, class: 'btn btn-success' do %>
       <span class="glyphicon glyphicon-plus-sign"></span> 新增
     <%end%>
     <div class="col-xs-3 pull-right">
